Added (testing and pray it doesnt explode) URL check

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,6 +8,7 @@
   <h1>WebGuard</h1>
   <!-- <button id="changeColor">Change Background Color</button> -->
   <button id="Scan">Scan</button>
+  <div id="result"></div>
   <script src="popup.js"></script>
 </body>
 </html>
