Fixed bugged Virustotal search

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -21,6 +21,8 @@
     <h1>Security Status</h1>
     <div id="status"></div>
   </section>
+  <br>
+  <textarea id="htmlOutput">JSON response will appear here.</textarea>
 
   <script src="popup.js"></script>
 
