Updates to SQL Inject stuff

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -11,11 +11,12 @@
   <section>
     <h1>WebGuard</h1>
     <button id="Scan">Scan</button>
+    <button id="scanSQL">SQL URL Checker</button>
     <div id="result"></div>
   </section>
 
   <hr> <!-- Divider between sections -->
-
+  
   <!-- Network & Session Check Section -->
   <section>
     <h1>Security Status</h1>
